--- a/app/src/main/res/values/strings_toasts.xml
+++ b/app/src/main/res/values/strings_toasts.xml
@@ -19,10 +19,10 @@
     <string name="toast_link_with_naver_success">네이버 아이디와 연동되었어요.</string>
     <string name="toast_link_with_kakao_success">카카오 아이디와 연동되었어요.</string>
 
-    <string name="toast_sign_out_seccess">로그아웃 되었어요</string>
+    <string name="toast_sign_out_seccess">로그아웃 되었어요.</string>
 
     <string name="toast_sent_verification_mail_success">인증메일이 전송되었어요.\n메일함을 확인해 주세요.</string>
-    <string name="toast_sent_verification_mail_fail">인증메일 전송에 실패했어요.\n로그인 후 재인증 하시거나, 관리자에게 문의해주세요.</string>
+    <string name="toast_sent_verification_mail_fail">인증메일 전송에 실패했어요.\n로그인 후 재인증 하시거나 관리자에게 문의해주세요.</string>
     <string name="toast_re_sent_verification_mail">메일이 재전송 되었어요.</string>
 
     <string name="toast_fail_unknown_error">알 수 없는 이유로 실패했어요.\n관리자에게 문의해주세요.</string>
