--- a/app/src/main/res/values/strings_settings.xml
+++ b/app/src/main/res/values/strings_settings.xml
@@ -9,4 +9,8 @@
     <string name="settings_sign_out">로그아웃</string>
     <string name="setting_switch_to_member">회원으로 전환하기</string>
     <string name="setting_anonymously">비회원</string>
+
+    <string name="settings_account_edit_name">이름 변경</string>
+    <string name="settings_account_change_password">패스워드 변경</string>
+    <string name="settings_account_edit_profile">프로필 수정</string>
 </resources>
