--- a/app/src/main/res/values/strings_sign.xml
+++ b/app/src/main/res/values/strings_sign.xml
@@ -34,6 +34,8 @@
     <string name="sign_resend">재전송</string>
     <string name="sign_please_check_verification__email">이메일 인증이 확인되지 않았어요.\n메일함을 확인해 주세요.\n메일이 보이지 않는다면\n휴지통 혹은 스팸메일함을 확인해 주세요.</string>
 
+    <string name="sign_up_choose_sign_up_method">가입방법을 선택해주세요.</string>
+
     <string name="naver_client_id">R7D_EUivu6CPSTLpzzkp</string>
     <string name="naver_client_secret">0sBCSITgqA</string>
     <string name="naver_profile_api_url">https://openapi.naver.com/v1/nid/me</string>
