--- a/app/src/main/res/values/strings_all_caps.xml
+++ b/app/src/main/res/values/strings_all_caps.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="all_caps_category">CATEGORY</string>
-    <string name="all__caps_settings">SETTINGS</string>
+    <string name="all_caps_settings">SETTINGS</string>
 
     <string name="all_caps_top">TOP</string>
     <string name="all_caps_bottom">BOTTOM</string>
