--- a/app/src/main/res/menu/menu_list.xml
+++ b/app/src/main/res/menu/menu_list.xml
@@ -17,7 +17,7 @@
     <item
         android:id="@+id/menu_list_view_type"
         android:icon="@drawable/icon_list"
-        android:title="@string/list_menu_view_type"
+        android:title="@string/menu_view_type"
         app:showAsAction="always"
         tools:ignore="AlwaysShowAction" />
     <item
