--- a/app/src/main/res/menu/menu_size.xml
+++ b/app/src/main/res/menu/menu_size.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_size_favorite"
@@ -10,5 +11,6 @@
         android:id="@+id/menu_size_delete"
         android:icon="@drawable/icon_delete"
         android:title="@string/menu_delete"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
 </menu>
