--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,8 @@
             type="com.leebeebeom.closetnote.ui.MainActivity" />
     </data>
 
+    <!--Render problem = fabCustomSize-->
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/root"
         android:layout_width="match_parent"
@@ -48,7 +50,7 @@
             app:fabCradleMargin="@dimen/_6sdp">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
-                style="@style/myBottomNavActiveColor"
+                style="@style/myBottomNav"
                 android:id="@+id/bottomNav"
                 app:itemBackground="@android:color/transparent"
                 android:layout_width="match_parent"
@@ -71,13 +73,13 @@
             tools:src="@drawable/icon_add"
             tools:ignore="ContentDescription" />
 
-        <!--Render problem = fabCustomSize-->
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabTop"
             app:backgroundTint="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_anchor="@id/bottomAppBar"
+            app:fabSize="mini"
             app:fabCustomSize="@dimen/_24sdp"
             android:layout_marginEnd="@dimen/_16sdp"
             android:layout_marginBottom="@dimen/_48sdp"
