--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,7 +38,7 @@
         <!--        font-->
         <item name="fontFamily">@font/noto</item>
         <!--        my background color-->
-        <item name="rvBackground">@color/myBackgroundColor</item>
+        <item name="backgroundGrey">@color/myBackgroundColor</item>
         <!--        go button color-->
         <item name="goBtnBackground">@color/myGoButtonBackgroundColor</item>
         <!--        ripple color remove-->
@@ -55,5 +55,6 @@
         <item name="mySignButtonHeight">@dimen/_48sdp</item>
         <item name="myNormalButtonHeight">@dimen/_36sdp</item>
         <item name="mySettingCardViewHeight">@dimen/_40sdp</item>
+        <item name="backgroundPrimary">@color/white</item>
     </style>
 </resources>
